# WasteTrace

./: .gitignore  README.md  mcp_server_stdio.py  pyproject.toml  requirements.txt  run_llm.py  streamlit_app.py
docs/: ARCHITECTURE.md  MCP_ARCHITECTURE.md  QUICK_START.md
src/: app.py
src/pipelines/: __init__.py  epa_state_msw.py  waste_streams.py
src/utils/: __init__.py  answer.py  baseline_context.py  fallbacks.py  http.py  intent.py  logging.py  router.py
