[project]
name = "wastetrace"
version = "0.1.0"
description = "Municipal waste analytics with MCP tooling"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.36.0",
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0",
  "black>=24.4.0",
  "pytest>=8.2.0",
]

